# dex-studio

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  Dockerfile  LICENSE  README.md  coverage.xml  design-preview.html  design-tokens.json  dex.yaml  package-lock.json  package.json  playwright.config.ts  poe_tasks.toml  pyproject.toml  rxconfig.py  seed.spec.ts  test_resume.txt
.claude/: settings.json
.claude/skills/: debug-issue.md  explore-codebase.md  refactor-safely.md  review-changes.md
.github/: dependabot.yml
.github/workflows/: auto-pr.yml  build.yml  ci.yml  cleanup.yml  copilot-setup-steps.yml  docs-notify.yml  docs-sync.yml  promote.yml  security.yml
.nicegui/: storage-general.json
.opencode/skills/bug-hunter/: SKILL.md
assets/: studio.css
config/: default.yaml
docs/: DESIGN.md  architecture-review.md  configuration.md  design.md  getting-started.md  index.md  observability.md  openapi.json
docs/testing/: DEX-STUDIO-TEST-PLAN.md
examples/: README.md
examples/careerdex/: .gitignore  Dockerfile  README.md  poe_tasks.toml  pyproject.toml  rxconfig.py
examples/careerdex/src/careerdex/: __init__.py  app.py  careerdex.py  cli.py
examples/careerdex/src/careerdex/components/: layout.py
examples/careerdex/src/careerdex/data/questions/: behavioral.yaml  technical.yaml
examples/careerdex/src/careerdex/models/: __init__.py  application.py  email.py  evaluation.py  job.py  networking.py  portal.py  progress.py  rag_eval.py  resume.py  story.py  vector_db.py
examples/careerdex/src/careerdex/pages/career/: __init__.py  analytics.py  applications.py  apply.py  batch.py  courses.py  cover_letter.py  dashboard.py  discover.py  email_checker.py  evaluate.py  interview.py  job_search.py  jobs.py  negotiate.py  network.py  networking.py  pdf_export.py  pipeline.py  prep.py  profile.py  progress.py  projects.py  research.py  resume.py  resume_matcher.py  scanner.py  stories.py  tracker.py  tui.py
examples/careerdex/src/careerdex/services/: __init__.py  apply_mode.py  archetypes.py  ats_scanner.py  auto_pipeline.py  batch_runner.py  batch_state.py  career_audit.py  company_graph.py  company_research.py  course_eval.py  cover_letter.py  cv_optimizer.py  cv_parser.py  dashboard_tui.py  email_client.py  graph.py  interview_prep.py  job_cache.py  job_evaluator.py  job_search.py  job_store.py  job_vector_search.py  llm_provider.py  match_history.py  negotiation.py  networking.py  pdf_generator.py  portal_config.py  portal_scanner.py  progress.py  project_eval.py  rag_eval.py  research_history.py  resume_builder.py  resume_matcher.py  scheduler.py  scoring.py  search.py  story_bank.py  (+2 more)
examples/careerdex/src/careerdex/services/aggregator/: __init__.py  base.py  greenhouse.py  indeed.py  lever.py  linkedin.py  normalizer.py  workday.py
examples/careerdex/src/careerdex/state/: __init__.py  career.py  jobs.py
examples/careerdex/src/careerdex/templates/: resume_classic.html.j2
examples/careerdex/tests/integration/: test_cross_service.py  test_networking_integration.py  test_progress_integration.py  test_tracker_integration.py
examples/careerdex/tests/unit/: test_aggregator.py  test_application_state_machine.py  test_company_graph.py  test_interview_prep.py  test_job_model.py  test_job_search.py  test_job_store.py  test_models_email.py  test_models_job.py  test_models_progress.py  test_networking.py  test_progress.py  test_resume_builder.py  test_scheduler.py  test_search.py  test_tracker.py
examples/ecommerce/: dex.yaml  run_all.py
examples/ecommerce/data/: customers.csv  orders.csv  products.csv
examples/movie-dex/: README.md  dex.yaml  explainability_audit.py  setup.py  test_edge_cases.py  train_models.py
examples/movie-dex/data/: credits.csv  movies.csv  ratings.csv
movie-dex/: dex.yaml
scripts/: bug_hunter.sh  seed_moviedex.py  setup-system.sh
scripts/demo/: browser_segments.py  record.py
specs/: plan.md
src/dex_studio/: __init__.py  _engine.py  _json.py  alerting.py  app.py  audit.py  auth.py  backfill.py  cli.py  client.py  compaction.py  config.py  dag.py  db_store.py  design_tokens.py  dex_studio.py  embeddings.py  engine.py  execution.py  flow.py  jobs.py  logstore.py  nav.py  quality.py  scd.py  scheduler.py  schema_evolution.py  store.py  studio_db.py  theme.py  utils.py  watermark.py
src/dex_studio/components/: __init__.py  app_shell.py  breadcrumb.py  chat_message.py  copilot.py  data_table.py  domain_sidebar.py  empty_state.py  inspector_panel.py  layout.py  metric_card.py  page_layout.py  project_card.py  sidebar.py  status_badge.py  status_card.py  tool_call_block.py
src/dex_studio/pages/: __init__.py  data_quality.py  health.py  lineage.py  (+5 more)
tests/: conftest.py
tests-e2e/: autonomous-exploration.spec.ts  pipelines-deep-test.spec.ts  route-discovery.spec.ts  smoke.spec.ts
tests/e2e/: package.json  test_all_modules.mjs  test_careerdex_e2e.mjs  test_full_e2e.mjs  test_resume_matcher.mjs  test_rigorous_e2e.mjs
tests/integration/: __init__.py  test_api_endpoints.py  test_app.py  test_auth_lifecycle.py  test_dexengine_integration.py  test_e2e_playwright.py  test_extended_integration.py  test_networking_integration.py  test_progress_integration.py  test_secops_routes.py  test_studio_integration.py  test_tracker_integration.py
tests/manual/: test_all_routes.py
tests/performance/: test_route_performance.py
tests/regression/: test_bug_fixes.py
tests/security/: test_auth_security.py
tests/system/: test_auth_flow.py  test_comprehensive_route_coverage.py
tests/unit/: conftest.py  test_auth_deps.py  test_cli.py  test_client.py  test_client_extended.py  test_components.py  test_config.py  test_dag.py  test_pipeline_status_race.py  test_pipelines_helpers.py  test_quality_helpers.py  test_routers.py  test_scheduler_config.py  test_scheduler_dead_letter.py  test_scheduler_dead_letter_retry.py  test_scheduler_tick.py  test_sources_helpers.py  test_studio_auth.py  test_studio_db.py  test_theme.py  test_user_flows.py  test_utils.py  test_warehouse_helpers.py
(+148 files in other folders)
