[project]
name = "dex-studio"
version = "0.5.0"
description = "DEX Studio – Data & Intelligence Platform"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "MIT" }
authors = [{ name = "TheDataEngineX" }]
keywords = ["data-engineering", "ml", "ai", "mlops", "dataenginex", "open-source", "self-hosted"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "dataenginex>=0.4.4",
    "fastapi[standard]>=0.115.0",
    "jinja2>=3.1.4",
    "itsdangerous>=2.2.0",
    "sse-starlette>=2.2.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "structlog>=25.5.0",
    "scikit-learn>=1.8.0",
    "uvloop>=0.22.0; sys_platform != 'win32'",
    "psutil>=7.2.2",
    "orjson>=3.11.0",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
# Resume PDF export
pdf = ["weasyprint>=68.1"]

[project.scripts]
dex-studio = "dex_studio.cli:main"

[project.urls]
Homepage = "https://github.com/TheDataEngineX/dex-studio"
Repository = "https://github.com/TheDataEngineX/dex-studio"
Issues = "https://github.com/TheDataEngineX/dex-studio/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dex_studio"]


[dependency-groups]
dev = [
    "poethepoet>=0.46.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
    "mypy>=2.1.0",
    "coverage>=7.14.0",
    "types-pyyaml>=6.0.12.20260518",

    "playwright>=1.50.0",
]

[tool.poe]
include = ["poe_tasks.toml"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C90"]

[tool.ruff.lint.per-file-ignores]
"scripts/demo/*.py" = [
    "E501",
] # demo scripts embed JS/CSS strings that can't be wrapped
"examples/**/*.py" = [
    "E402",  # sys.path manipulation before imports
    "E501",  # tabular print output intentionally wide
    "C901",  # exploratory scripts allow higher complexity
    "T201",  # print() is expected in examples
    "F841",  # unused vars common in exploratory scripts
    "B007",  # loop vars sometimes unpacked for readability
]

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.ruff.lint.isort]
known-first-party = ["dex_studio"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
# Suppress untyped-decorator errors from third-party libs (nicegui, pywebview)
disable_error_code = ["misc"]
# Prevent false positives when stubs are absent (pre-commit isolated env)
warn_unused_ignores = false


[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
