[project]
name = "careerdex"
version = "0.1.0"
description = "CareerDEX — AI-powered career intelligence built on DataEngineX"
authors = [
    {name = "Jay", email = "jayapal.myaka99@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
license = {file = "LICENSE"}
dependencies = [
    "reflex>=0.9.2.post1",
    "duckdb>=1.5.2",
    "structlog>=25.5.0",
    "python-dotenv>=1.2.2",
    "feedparser>=6.0.12",
    "python-docx>=1.2.0",
    "pypdf>=6.11.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pytz>=2026.2",
    "jinja2>=3.1.6",
    "apscheduler>=3.11.2",
]


[project.optional-dependencies]
pdf = [
    "weasyprint>=68.1",
]
dex = [
    "dataenginex",
]

[project.scripts]
careerdex = "careerdex.cli:main"

[project.urls]
Homepage = "https://github.com/TheDataEngineX/careerdex"
Repository = "https://github.com/TheDataEngineX/careerdex"
Issues = "https://github.com/TheDataEngineX/careerdex/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/careerdex"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.poe]
include = ["poe_tasks.toml"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.13",
    "mypy>=2.1.0",
    "poethepoet>=0.45.0",
    "uv>=0.11.14",
]

[tool.uv]
python-preference = "only-managed"
default-groups = ["dev"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C90"]

[tool.ruff.lint.per-file-ignores]
"src/careerdex/services/job_search.py" = ["C901"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["docx.*", "pypdf.*", "weasyprint.*", "reflex.*", "yaml", "numpy", "dataenginex.*", "apscheduler.*", "pytz"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Reflex page components: rx.Component return types and EventSpec patterns not fully typed
module = ["careerdex.pages.*", "careerdex.state.*"]
disable_error_code = ["no-any-return", "operator", "attr-defined", "type-arg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
